php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38904 apache2filter changes cwd to /
Submitted: 2006-09-20 16:30 UTC Modified: 2006-09-25 14:49 UTC
From: hannes dot magnusson at gmail dot com Assigned: john (profile)
Status: Closed Package: Apache2 related
PHP Version: 5CVS-2006-09-20 (CVS) OS: FreeBSD6.1
Private report: No CVE-ID: None
 [2006-09-20 16:30 UTC] hannes dot magnusson at gmail dot com
Description:
------------
running apache2filter changes cwd to /
Caused by the re-implementation see: 
http://news.php.net/php.cvs/39024

Reproduce code:
---------------
var_dump(getcwd(), realpath("."));

Actual result:
--------------
string(1) "/" string(1) "/"

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-09-25 14:49 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC