Fixed bug #38904 (apache2filter changes cwd to /).